--- a/apps/hero/project.json
+++ b/apps/hero/project.json
@@ -1,3 +1,4 @@
 {
-	"$schema": "../../node_modules/nx/schemas/project-schema.json"
+	"$schema": "../../node_modules/nx/schemas/project-schema.json",
+	"name": "hero"
 }
