--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "devDependencies": {
     "@builder.io/qwik": "^0.11.1",
     "@builder.io/qwik-city": "^0.0.112",
-    "@nrwl/cli": "14.8.3",
-    "@nrwl/js": "14.8.3",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "14.8.3",
+    "@nrwl/cli": "15.3.0",
+    "@nrwl/js": "15.3.0",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/workspace": "15.3.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/eslint": "8.4.6",
     "@types/node": "latest",
@@ -38,7 +38,7 @@
     "eslint-plugin-qwik": "0.9.0",
     "node-fetch": "3.2.10",
     "npm-run-all": "^4.1.5",
-    "nx": "14.8.3",
+    "nx": "15.3.0",
     "postcss": "^8.4.16",
     "prettier": "2.7.1",
     "tailwindcss": "^3.1.8",
@@ -48,3 +48,4 @@
     "wrangler": "2.1.9"
   }
 }
+
